Sun May 19 23:39:02 CDT 2002 Adam Heath <doogie@debian.org>

  * <all Makefile.in>, Makefile.conf.in: Add rules to Makefile.conf, to
    rebuild Makefile if $(srcdir)/Makefile.in is modified.  This also
    required adding a 'default' target to all Makefiles.

Sun, 19 May 2002 22:56:41 -0500 Adam Heath <doogie@debian.org>

  * utils/md5sum.c: Fairly heavy work(net no lines changed), to fix
    longjmp() clashing variable warnings.  Also, a few miscellaneous gcc
    -W<foo> fixes.

Sun May 19 20:25:05 CDT 2002 Adam Heath <doogie@debian.org>

  * lib/showpkg.c, lib/utils.c, optlib/long-options.c, main/archives.c,
    main/configure.c, main/main.c, main/main.h, main/query.c,
    optlib/long-options.c, lib/showpkg.c, lib/utils.c: Several more gcc
    -W<foo> fixes.

Sun May 19 18:48:39 CDT 2002 Adam Heath <doogie@debian.org>

  * debian/rules: Fix overzealous running of autoheader for every build.

Sun May 19 06:05:24 CDT 2002 Adam Heath <doogie@debian.org>

  * configure.in: Split out the -W*-prototype warnings into separate
    checks.

Sun May 19 06:01:31 CDT 2002 Adam Heath <doogie@debian.org>

  * configure.in, automake/dpkg.m4: Make a new macro, DPKG_C_GCC_ATTRIBUTE.

Sun May 19 05:57:24 CDT 2002 Adam Heath <doogie@debian.org>

  * automake/dpkg.m4.  Gah, I hate gcc.  AC_TRY_COMPILE() produces code
    of the form 'int main() { ... }'.  When -Werror -Wstrict-prototypes is
    given to gcc, it thinks the above code snippet is an error, and aborts.
    This was making DPKG_C_GCC_TRY_WARNS disable some -W options.  So, I
    no longer use AC_TRY_COMPILE.

Sun May 19 04:56:51 CDT 2002 Adam Heath <doogie@debian.org>

  * debian/rules:  Oops.  The command to run is aclocal, not aclocal.m4.

Sun May 19 04:45:41 CDT 2002 Adam Heath <doogie@debian.org>

  * configure.in, config.h.bot(removed), acconfig.h(removed):  The latest
    autoheader/autoconf combination allows us to do everything in
    configure.in.  config.h.bot is now in AH_BOTTOM(), and the