@@ -285,6 +285,8 @@ ssize_t buffer_copy_setup_IntInt(int i1, int typeIn, void *procIn,
 ssize_t buffer_copy_setup(buffer_arg argIn, int typeIn, void *procIn,
 		       buffer_arg argOut, int typeOut, void *procOut,
 		       ssize_t limit, const char *desc);
+ssize_t buffer_write(buffer_data_t data, void *buf, ssize_t length, const char *desc);
+ssize_t buffer_read(buffer_data_t data, void *buf, ssize_t length, const char *desc);
 ssize_t buffer_copy(buffer_data_t read_data, buffer_data_t write_data, ssize_t limit, const char *desc);
 
 extern volatile int onerr_abort;
