@@ -455,7 +455,6 @@ void printarch(const char *const *argv) {
   if (fflush(stdout)) werr("stdout");
 }
 
-void cmpversions(const char *const *argv) NONRETURNING;
 void cmpversions(const char *const *argv) {
   struct relationinfo {
     const char *string;
