@@ -33,7 +33,6 @@
 #include <dpkg-db.h>
 #include "dpkg-split.h"
 
-void do_split(const char *const *argv) NONRETURNING;
 void do_split(const char *const *argv) {
   const char *sourcefile, *prefix;
   char *palloc;
