@@ -1,3 +1,9 @@
+Mon May 20 00:58:17 CDT 2002 Adam Heath <doogie@debian.org>
+
+  * main/enquiry.c, main/main.h, utils/md5sum.c, split/dpkg-split.h,
+    split/split.c, lib/Makefile.in, include/dpkg.h.in, dpkg-deb/build.c,
+    dpkg-deb/dpkg-deb.h: Even more gcc warning fixes.
+
 Sun May 19 23:39:02 CDT 2002 Adam Heath <doogie@debian.org>
 
   * <all Makefile.in>, Makefile.conf.in: Add rules to Makefile.conf, to
